# City4CFD

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.bib  CMakeLists.txt  README.md  TODO.md  vcpkg.json
.github/workflows/: build-docker.yml  build.yml  bump-homebrew-formula.yml  docker-image.yml  docker-publish.yml  release-win64-exe.yml  release-win64.yml  win_build.yml
docker/: build-base.sh  city4cfd-build-base.dockerfile  city4cfd.dockerfile  docker-compose.yml
docker/run/: city4cfd_docker.sh  windows_city4cfd_run.bat  windows_city4cfd_run.ps1
examples/TUDCampus/: config_bpg.json  config_bpg_aw_remeshed.json  config_bpg_comments.json  config_import_buildings.json  config_manual.json
examples/TUDCampus/polygons/: domainBnd.geojson  influRegion.geojson  tudcampus.geojson
src/: Boundary.cpp  Boundary.h  BoundingRegion.cpp  BoundingRegion.h  Building.cpp  Building.h  BuildingFootprintFilter.cpp  BuildingFootprintFilter.h  CGALTypes.h  Config.cpp  Config.h  ImportedBuilding.cpp  ImportedBuilding.h  LoD12.cpp  LoD12.h  LoD22.cpp  LoD22.h  Map3d.cpp  Map3d.h  PointCloud.cpp  PointCloud.h  PolyFeature.cpp  PolyFeature.h  ReconstructedBuilding.cpp  ReconstructedBuilding.h  SemanticPoly.cpp  SemanticPoly.h  Sides.cpp  Sides.h  SurfaceLayer.cpp  SurfaceLayer.h  Terrain.cpp  Terrain.h  Top.cpp  Top.h  TopoFeature.cpp  TopoFeature.h  config.cpp  config.h  configSchema.inc  (+9 more)
tools/: prepare_point_cloud.sh
tools/fetch_polygons/: cities.txt  fetch.py  fetch_osm.py
tools/polyprep/: README.md  polyprep.py  requirements.txt
tools/prepare_point_cloud/: CMakeLists.txt  config.json
tools/prepare_point_cloud/src/: PCConfig.h  PCconfigSchema.inc  city4cfd_pcprep.cpp  city4cfd_prepare_point_cloud.cpp
